--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,6 +44,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0;
 }
 @media small {
     .column {
